# sinope-130

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  Contributors.md  Donations.md  README.md  README_FR.md  custom_components.json  hacs.json  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_en.yaml  bug_report_en.yml  bug_report_fr.yaml  bug_report_fr.yml  config.yml  feature_request_en.yaml  feature_request_fr.yaml  feature_request_fr.yml
.github/workflows/: ci.yml  hassfest.yaml  mypy.yml  release.yml  test-component.yml
automations/neviweb130/: update_notification.yaml
blueprints/lovelace/neviweb130/: auto_update.yaml
custom_components/neviweb130/: __init__.py  attributes.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  devices.py  helpers.py  light.py  lock.py  manifest.json  number.py  schema.py  select.py  sensor.py  services.yaml  session_manager.py  strings.json  switch.py  update.py  valve.py
custom_components/neviweb130/translations/: en.json  fr.json
doc/: Donations.md  doc_index.md  doc_index_en.md  new_bridge.md  new_bridge_en.md  options.md  options_en.md  readme_fr.md  reconfigure.md  reconfigure_en.md
scripts/: update-version.sh
