[project]
name = "neviweb130"
version = "2.0"
description = "Sinope Neviweb130: Home assistant custom_components to manage Sinopé Zigbee and Wi-Fi devices."
authors = [{ name = "Claude Gélinas", email = "claude@phyto.qc.ca" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

[project.urls]
repository = "https://github.com/claudegel/sinope-130"

[dependency-groups]
dev = [
    "aiofiles~=24.1.0",
    "types-aiofiles~=24.1.0",
    "homeassistant-stubs~=2025.9.4",
    "mypy",
    "pre-commit",
]

[tool.hatch.build.targets.sdist]
include = ["custom_components"]

[tool.hatch.build.targets.wheel]
include = ["custom_components"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"

[tool.pyupgrade]
py312plus = true

[tool.codespell]
skip = "Contributors.md,custom_components/neviweb130/translations/*.json"
ignore-words-list = "hass"
quiet-level = 2
